[package]
name = "raytrace_weekend"
version = "0.1.0"
authors = ["Barbacamanitu <russmbiz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.12"
assert_approx_eq = "1.1.0"
rand = "0.8.1"
rayon = "1.5.0"
clap = "2.33.3"